--- a/src/app/page/contacto/contacto.component.html
+++ b/src/app/page/contacto/contacto.component.html
@@ -52,7 +52,7 @@
         <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
         <div class="d-flex gap-2 w-100 justify-content-between">
           <div>
-            <h6 class="mb-0">Another title here</h6>
+            <h6 class="mb-0">otro titulo aqui</h6>
             <p class="mb-0 opacity-75">Some placeholder content in a paragraph that goes a little longer so it wraps to a new line.</p>
           </div>
           <small class="opacity-50 text-nowrap">3d</small>
