imagenes de equipo

--- a/src/app/page/inicio/inicio.component.html
+++ b/src/app/page/inicio/inicio.component.html
@@ -25,7 +25,7 @@
             Contamos con stock de Muebles realizados por nosotros</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
             <a href="trabajo" type="button"class="btn btn-primary btn-lg px-4 me-sm-3">Trabajos</a>
-            <a href="servicio" type="button" class="btn btn-outline-secondary btn-lg px-4">Servicios</a>
+            <a href="servicios" type="button" class="btn btn-outline-secondary btn-lg px-4">Servicios</a>
           </div>
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
