--- a/src/app/page/servicios/servicios.component.html
+++ b/src/app/page/servicios/servicios.component.html
@@ -48,7 +48,7 @@
               <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"/></svg>
             </div>
             <div>
-              <h2>Ensamble 1</h2>
+              <h2>Ensamble</h2>
               <p>caballetes, sillas, cajas y cajones, revestimientos y muebles laminados.</p>
               <a href="equipo" class="btn btn-primary">
                 Equipo de trabajo
