--- a/src/app/page/contacto/contacto.component.css
+++ b/src/app/page/contacto/contacto.component.css
@@ -1,62 +1,46 @@
-.b-example-divider {
-    height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
-  
-  .bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-  }
-  
-  .opacity-50 { opacity: .5; }
-  .opacity-75 { opacity: .75; }
-  
-  .list-group {
-    width: auto;
-    max-width: 460px;
-    margin: 4rem auto;
-  }
-  
-  .form-check-input:checked + .form-checked-content {
-    opacity: .5;
-  }
-  
-  .form-check-input-placeholder {
-    pointer-events: none;
-    border-style: dashed;
-  }
-  [contenteditable]:focus {
-    outline: 0;
-  }
-  
-  .list-group-checkable {
-    display: grid;
-    gap: .5rem;
-    border: 0;
-  }
-  .list-group-checkable .list-group-item {
-    cursor: pointer;
-    border-radius: .5rem;
-  }
-  .list-group-item-check {
-    position: absolute;
-    clip: rect(0, 0, 0, 0);
-    pointer-events: none;
-  }
-  .list-group-item-check:hover + .list-group-item {
-    background-color: var(--bs-light);
-  }
-  .list-group-item-check:checked + .list-group-item {
-    color: #fff;
-    background-color: var(--bs-blue);
-  }
-  .list-group-item-check[disabled] + .list-group-item,
-  .list-group-item-check:disabled + .list-group-item {
-    pointer-events: none;
-    filter: none;
-    opacity: .5;
-  }
-  
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+body { background:rgb(30,30,40); }
+form { max-width:420px; margin:50px auto; }
+
+.feedback-input {
+  color: black;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight:500;
+  font-size: 18px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border:2px solid #00C9FF;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width:100%;
+  box-sizing: border-box;
+  outline:0;
+}
+
+.feedback-input:focus { border:2px solid gainsboro; }
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize:vertical;
+}
+
+[type="submit"] {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  width: 100%;
+  background: gray;
+  border-radius:5px;
+  border:0;
+  cursor:pointer;
+  color:white;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
+  transition: all 0.3s;
+  margin-top:-4px;
+  font-weight:700;
+}
+[type="submit"]:hover { background: #00C9FF; }
