--- a/src/app/page/inicio/inicio.component.css
+++ b/src/app/page/inicio/inicio.component.css
@@ -9,4 +9,6 @@
   @media (min-width: 992px) {
     .rounded-lg-3 { border-radius: .3rem; }
   }
-  
+  .Letras-inicio{
+    background-color: gainsboro;
+  }
