--- a/src/app/page/inicio/inicio.component.html
+++ b/src/app/page/inicio/inicio.component.html
@@ -23,7 +23,7 @@
               Fabricamos todo tipo de Amoblamientos en Melamina.
               Contamos con stock de Muebles realizados por nosotros</b></p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-              <a href="trabajo" type="button"class="btn btn-primary btn-lg px-4 me-sm-3">Trabajos</a>
+              <a href="trabajo" type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3">Trabajos</a>
               <a href="servicios" type="button" class="btn btn-outline-secondary btn-lg px-4">Servicios</a>
             </div>
           </div>
