--- a/src/app/page/inicio/inicio.component.css
+++ b/src/app/page/inicio/inicio.component.css
@@ -10,5 +10,5 @@
     .rounded-lg-3 { border-radius: .3rem; }
   }
   .Letras-inicio{
-    background-color: gainsboro;
+    background-color: rgba(227, 237, 234,0.4)
   }
