--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -11,7 +11,7 @@
             <a class="nav-link active" aria-current="page" href="inicio">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="trabajo">trabajo</a>
+            <a class="nav-link" href="trabajo">Trabajo</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="servicios">Servicios</a>
