--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,13 +1,35 @@
+  <link href='https://css.gg/facebook.css' rel='stylesheet'>
+    
+    
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <footer class="footer-distributed">
 
-<div class="bg-dark text-secondary px-4 py-5 text-center">
-    <div class="py-5">
-      <h1 class="display-5 fw-bold text-white">Benvenuto</h1>
-      <div class="col-lg-6 mx-auto">
-        <p class="fs-5 mb-4">Si quieres obtener mas informacion sobre nosotros puedes contactarnos</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <a type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold" href="contacto" >Contactos</a>
-          <a type="button" class="btn btn-outline-light btn-lg px-4" href="equipo">Equipo</a>
-        </div>
+      <h1 style="color: white; position: relative;
+      top: 10px; left: 500px;">Benvenuto</h1>
+
+      <div class="footer-right">
+
+        <a href="https://www.facebook.com/carpinteriabenvenuto/?tn-str=k*F"><i class="fa fa-facebook"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=542996062332&app=facebook&entry_point=page_cta"><i class="fa fa-whatsapp"></i></a>
+
       </div>
-    </div>
-  </div>
+
+      <div class="footer-left">
+
+        <p class="footer-links">
+          <a class="link-1" href="inicio">Inicio</a>
+
+          <a href="trabajo">Trabajo</a>
+
+          <a href="servicios">Servicios</a>
+
+          <a href="contacto">Contacto</a>
+
+          <a href="equipo">Equipo</a>
+        </p>
+
+        <p>Benvenuto &copy; 1970</p>
+      </div>
+
+    </footer>
