--- a/src/app/page/equipo/equipo.component.html
+++ b/src/app/page/equipo/equipo.component.html
@@ -8,19 +8,19 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img src="../../../assets/Imagenes/cara lele.png" height="250px" style="margin: 50px; border-radius:50%;" alt="caraLELE">
+          <img class="zoomEquipo" src="../../../assets/Imagenes/cara lele.png" height="250px" style="margin: 50px; border-radius:50%;" alt="caraLELE">
           <h2>Victoria Estevez</h2>
           <p>Ensambladora</p>
           <p><a class="btn btn-secondary" href="https://www.instagram.com/victoriaestevezlpm/">Contactar &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img src="../../../assets/Imagenes/cara_mariano.png" height="250px" style="margin: 50px; border-radius:50%" alt="caraNANO">  
+          <img class="zoomEquipo" src="../../../assets/Imagenes/cara_mariano.png" height="250px" style="margin: 50px; border-radius:50%" alt="caraNANO">  
           <h2>Mariano Collazo</h2>
           <p>Barnizador</p>
           <p><a class="btn btn-secondary" href="https://www.instagram.com/mariano_collazo_/">Contactar &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img src="../../../assets/Imagenes/cara_jj.png" height="250px" style="margin: 50px; border-radius:50%" alt="caraJJ">  
+          <img class="zoomEquipo" src="../../../assets/Imagenes/cara_jj.png" height="250px" style="margin: 50px; border-radius:50%" alt="caraJJ">  
           <h2>Juan Caceres</h2>
           <p>Cortador</p>
           <p><a class="btn btn-secondary" href="https://www.instagram.com/juan_caceres14/">Contactar &raquo;</a></p>
