--- a/src/app/page/inicio/inicio.component.html
+++ b/src/app/page/inicio/inicio.component.html
@@ -18,10 +18,10 @@
       <div class="px-4 pt-5 my-5 text-center border-bottom">
           <h1 class="display-4 fw-bold Letras-inicio">Benvenuto</h1>
           <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4 Letras-inicio"><b>Carpintería Artesanal desde 1970 en la ciudad de Cipolletti.
-              Realizamos trabajos en Madera Estacionada.
-              Fabricamos todo tipo de Amoblamientos en Melamina.
-              Contamos con stock de Muebles realizados por nosotros</b></p>
+            <p class="lead mb-4 Letras-inicio"><b>Carpintería Artesanal</b> desde 1970 en la ciudad de Cipolletti.
+              Realizamos trabajos en <b>Madera Estacionada</b>.
+              Fabricamos todo tipo de <b>Amoblamientos en Melamina</b>.
+              Contamos con stock de <b>Muebles</b> realizados por nosotros</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
               <a href="trabajo" type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3">Trabajos</a>
               <a href="servicios" type="button" class="btn btn-outline-secondary btn-lg px-4">Servicios</a>
