--- a/src/app/page/servicios/servicios.component.html
+++ b/src/app/page/servicios/servicios.component.html
@@ -37,8 +37,8 @@
               <h2>Barniz</h2>
               <p>Entendemos la importancia de mantener el aspecto natural de la madera, sin tapar su veta. Por eso diseñamos una línea que cubre todas las necesidades de protección y duración.
 
-                <br>La madera vive, nosotros la cuidamos</p>
-              <a href="equipo" class="btn btn-outline-secondary">
+                <br>La madera vive, nosotros la cuidamos.</p>
+              <a href="equipo" class="btn btn-outline-info">
                 Equipo de trabajo
               </a>
             </div>
@@ -49,8 +49,8 @@
             </div>
             <div>
               <h2>Ensamble</h2>
-              <p>caballetes, sillas, cajas y cajones, revestimientos y muebles laminados.</p>
-              <a href="equipo" class="btn btn-outline-secondary">
+              <p>caballetes, sillas, cajas y cajones, revestimientos y muebles laminados.<p>
+              <a href="equipo" class="btn btn-outline-info">
                 Equipo de trabajo
               </a>
             </div>
@@ -61,8 +61,8 @@
             </div>
             <div>
               <h2>Productos hechos</h2>
-              <p>Equipá Tu Hogar Con Muebles que Optimizan Tus Espacios. Hacé Que El Home Office Sea Cómodo</p>
-              <a href="equipo" class="btn btn-outline-secondary">
+              <p>Equipá Tu Hogar Con Muebles que Optimizan Tus Espacios. Hacé Que El Home Office Sea Cómodo.</p>
+              <a href="equipo" class="btn btn-outline-info">
                 Equipo de trabajo
               </a>
             </div>
