--- a/src/app/page/trabajo/trabajo.component.html
+++ b/src/app/page/trabajo/trabajo.component.html
@@ -32,45 +32,51 @@
             <img src="./../../../assets/Imagenes/Imagen_trabajo_1_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
             
             <div class="card-body">
-              <p class="card-text">Mesada hecha de madera</p>
+              <h4 class="card-text">Mesada hecha de madera</h4>
+              <p>Les mostramos el resultado final de esta hermosa Cubierta realizada en Eucalipto Alistonado. Se realizaron todos los ajustes de la misma en obra, se preparó y se laqueó dándole una terminación súper suave y delicada al tacto.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <a href="servicios" class="btn btn-sm btn-outline-secondary">Servicios</a>
+                <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
               </div>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card shadow-sm">
             <img src="./../../../assets/Imagenes/Imagen_trabajo_2_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
-
             <div class="card-body">
-              <p class="card-text">Mesa rectangular</p>
+              <h4 class="card-text">Mesa rectangular</h4>
+              <p>(Estructuras de metal entregadas por nuestro cliente). Las Tapas rectangulares en Cedro Enchapado con Terminación Brillante.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <a href="servicios" class="btn btn-sm btn-outline-secondary">Servicios</a>
+                <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
               </div>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card shadow-sm">
             <img src="./../../../assets/Imagenes/Imagen_trabajo_3_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
 
             <div class="card-body">
-              <p class="card-text">Mesas redondas pequeñas</p>
+              <h4 class="card-text">Mesas redondas pequeñas</h4>
+              <p>Hace un tiempo entregamos este Trabajo. El cliente nos entregó las estructuras de Caño y nosotros realizamos las respectivas Tapas en Cedro Enchapado con Terminación Brillante.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <a href="servicios" class="btn btn-sm btn-outline-secondary">Servicios</a>
+                <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
               </div>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card shadow-sm">
             <img src="./../../../assets/Imagenes/Imagen_trabajo_4_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
 
             <div class="card-body">
-              <p class="card-text">Puertas de madera</p>
+              <h4 class="card-text">Puertas de madera</h4>
+              <p>Puertas Vintage. Realizadas a pedido con Tablero Replanado y Molduras Personalizadas. Todo construido en Caroba 100% Estacionada.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <a href="servicios" class="btn btn-sm btn-outline-secondary">Servicios</a>
+                <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
               </div>
             </div>
           </div>
@@ -80,25 +86,29 @@
             <img src="./../../../assets/Imagenes/Imagen_trabajo_5_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
 
             <div class="card-body">
-              <p class="card-text">Muebles blancos de cocina</p>
+              <h4 class="card-text">Muebles blancos de cocina</h4>
+              <p>Bajo Mesada a Medida Terminado e Instalado en la Ciudad de Cipolletti.</p>
               <div class="d-flex justify-content-between align-items-center">
-                <a href="servicios" class="btn btn-sm btn-outline-secondary">Servicios</a>
+                <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
               </div>
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card shadow-sm">
             <img src="./../../../assets/Imagenes/Imagen_trabajo_6_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
 
             <div class="card-body">
-              <p class="card-text">Muebles negros de cocina</p>
+              <h4 class="card-text">Muebles negros de cocina</h4>
+              <p>Renovación de Cocina en Proceso. La semana pasada realizamos la instalación de estos Amoblamientos a Medida en la Ciudad de Cipolletti. </p>
               <div class="d-flex justify-content-between align-items-center">
-                <a href="servicios" class="btn btn-sm btn-outline-secondary">Servicios</a>
+                <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
               </div>
             </div>
           </div>
         </div> 
+
       </div>
     </div>
 </div>
