--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,32 +4,35 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <footer class="footer-distributed">
-
-      <h1 style="color: white; position: relative;
-      top: 10px; left: 500px;">Benvenuto</h1>
-
-      <div class="footer-right">
-
-        <a href="https://www.facebook.com/carpinteriabenvenuto/?tn-str=k*F"><i class="fa fa-facebook"></i></a>
-        <a href="https://api.whatsapp.com/send?phone=542996062332&app=facebook&entry_point=page_cta"><i class="fa fa-whatsapp"></i></a>
-
+      <div class="container-fluid">
+        <h1 style="color: white; position: relative;
+        top: 10px; left:35%;
+        width: 600px;"><img src="../../../assets/Imagenes/benvenuto_logo.png" style="margin: 10px;" alt="benvenuto_logo" width="100px" height="100px"> Benvenuto</h1>
+  
+        <div class="footer-right">
+  
+          <a href="https://www.facebook.com/carpinteriabenvenuto/?tn-str=k*F"><i class="fa fa-facebook"></i></a>
+          <a href="https://api.whatsapp.com/send?phone=542996062332&app=facebook&entry_point=page_cta"><i class="fa fa-whatsapp"></i></a>
+  
+        </div>
+  
+        <div class="footer-left">
+  
+          <p class="footer-links">
+            <a class="link-1" href="inicio">Inicio</a>
+  
+            <a href="trabajo">Trabajo</a>
+  
+            <a href="servicios">Servicios</a>
+  
+            <a href="contacto">Contacto</a>
+  
+            <a href="equipo">Equipo</a>
+          </p>
+  
+          <p>Benvenuto &copy; 1970</p>
+        </div>
       </div>
 
-      <div class="footer-left">
-
-        <p class="footer-links">
-          <a class="link-1" href="inicio">Inicio</a>
-
-          <a href="trabajo">Trabajo</a>
-
-          <a href="servicios">Servicios</a>
-
-          <a href="contacto">Contacto</a>
-
-          <a href="equipo">Equipo</a>
-        </p>
-
-        <p>Benvenuto &copy; 1970</p>
-      </div>
 
     </footer>
