--- a/src/app/page/contacto/contacto.component.html
+++ b/src/app/page/contacto/contacto.component.html
@@ -1,7 +1,15 @@
 <form>  
-  <h2 style="margin-left: 120px;">Contactanos</h2>    
-  <input name="name" type="text" class="feedback-input" placeholder="Name" />   
-  <input name="email" type="text" class="feedback-input" placeholder="Email" />
-  <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-  <input type="submit" value="SUBMIT"/>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h2 style="margin-left: 100px;">Contactanos</h2>    
+        <input name="name" type="text" class="feedback-input" placeholder="Name" />   
+        <input name="email" type="text" class="feedback-input" placeholder="Email" />
+        <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+        <input type="submit" value="SUBMIT"/> 
+      </div>
+    </div>
+  </div>
+
+  
 </form>
