cambios finales-mapas-etc

--- a/src/app/page/inicio/inicio.component.html
+++ b/src/app/page/inicio/inicio.component.html
@@ -23,8 +23,8 @@
               Fabricamos todo tipo de <b>Amoblamientos en Melamina</b>.
               Contamos con stock de <b>Muebles</b> realizados por nosotros</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-              <a href="trabajo" type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3">Trabajos</a>
-              <a href="servicios" type="button" class="btn btn-outline-secondary btn-lg px-4">Servicios</a>
+              <a href="trabajo" type="button" class="btn btn-info btn-lg px-4 me-sm-3">Trabajos</a>
+              <a href="servicios" type="button" class="btn btn-secondary btn-lg px-4">Servicios</a>
             </div>
           </div>
       </div>
