--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -13,12 +13,15 @@
   
           <a href="https://www.facebook.com/carpinteriabenvenuto/?tn-str=k*F"><i class="fa fa-facebook"></i></a>
           <a href="https://api.whatsapp.com/send?phone=542996062332&app=facebook&entry_point=page_cta"><i class="fa fa-whatsapp"></i></a>
-  
+          <a href="https://mail.google.com/mail/u/0/#search/carpinteria.benvenuto%40gmail.com"><i class="fa fa-envelope"></i></a>
+
         </div>
+
   
         <div class="footer-left">
-  
+
           <p class="footer-links">
+
             <a class="link-1" href="inicio">Inicio</a>
   
             <a href="trabajo">Trabajo</a>
@@ -28,8 +31,12 @@
             <a href="contacto">Contacto</a>
   
             <a href="equipo">Equipo</a>
+
+
           </p>
-  
+            
+          <p style="margin-top:20px ;">Tel: 0299 606-2332</p>
+
           <p>Benvenuto &copy; 1970</p>
         </div>
       </div>
