--- a/src/app/page/contacto/contacto.component.css
+++ b/src/app/page/contacto/contacto.component.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 body { background:rgb(30,30,40); }
-form { max-width:420px; margin:50px auto; }
+form { max-width:420px; margin:50px }
 
 .feedback-input {
   color: black;
