--- a/src/app/page/contacto/contacto.component.html
+++ b/src/app/page/contacto/contacto.component.html
@@ -2,11 +2,16 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h2 style="margin-left: 100px;">Contactanos</h2>    
+        <h2 style="position: relative;left: 70px;">Contactanos</h2>    
         <input name="name" type="text" class="feedback-input" placeholder="Name" />   
         <input name="email" type="text" class="feedback-input" placeholder="Email" />
         <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
         <input type="submit" value="SUBMIT"/> 
+      </div>
+
+      <div class="col-2" style="position: relative; left: 200px;">
+        <h2 style="position: relative; left: 240px;">Ubicacion</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.168747031808!2d-67.98680047894314!3d-38.942973151456684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a31bf7914f199%3A0xe222678e09284f11!2sCarpinter%C3%ADa%20BENVENUTO!5e0!3m2!1sen!2sar!4v1650370636731!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </div>
