--- a/src/app/page/equipo/equipo.component.html
+++ b/src/app/page/equipo/equipo.component.html
@@ -7,6 +7,7 @@
   
       <!-- Three columns of text below the carousel -->
       <div class="row">
+        <h2 class="pb-2 border-bottom" style="margin-top: 30px;">Equipo de trabajo</h2> 
         <div class="col-lg-4">
           <img class="zoomEquipo" src="../../../assets/Imagenes/cara lele.png" height="250px" style="margin: 50px; border-radius:50%;" alt="caraLELE">
           <h2>Victoria Estevez</h2>
