--- a/src/app/page/trabajo/trabajo.component.html
+++ b/src/app/page/trabajo/trabajo.component.html
@@ -26,14 +26,14 @@
 <div class="album py-5 bg-light">
     <div class="container">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5">
         <div class="col">
           <div class="card shadow-sm">
             <img src="./../../../assets/Imagenes/Imagen_trabajo_1_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
             
             <div class="card-body">
               <h4 class="card-text">Mesada hecha de madera</h4>
-              <p>Les mostramos el resultado final de esta hermosa Cubierta realizada en Eucalipto Alistonado. Se realizaron todos los ajustes de la misma en obra, se preparó y se laqueó dándole una terminación súper suave y delicada al tacto.</p>
+              <p>Cubierta realizada en Eucalipto Alistonado. Se realizaron todos los ajustes de la misma en obra, se preparó y se laqueó dándole una terminación súper suave y delicada al tacto.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
               </div>
@@ -87,21 +87,63 @@
 
             <div class="card-body">
               <h4 class="card-text">Muebles blancos de cocina</h4>
-              <p>Bajo Mesada a Medida Terminado e Instalado en la Ciudad de Cipolletti.</p>
+              <p>Bajo Mesada a Medida Terminado e Instalado en la Ciudad de Cipolletti</p>
               <div class="d-flex justify-content-between align-items-center">
                 <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
               </div>
             </div>
           </div>
         </div>
-
+        
         <div class="col">
           <div class="card shadow-sm">
             <img src="./../../../assets/Imagenes/Imagen_trabajo_6_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
 
             <div class="card-body">
               <h4 class="card-text">Muebles negros de cocina</h4>
-              <p>Renovación de Cocina en Proceso. La semana pasada realizamos la instalación de estos Amoblamientos a Medida en la Ciudad de Cipolletti. </p>
+              <p>Renovación de Cocina en Proceso. La semana pasada realizamos la instalación de estos Amoblamientos a Medida. </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
+              </div>
+            </div>
+          </div>
+        </div> 
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="./../../../assets/Imagenes/Imagen_trabajo_7_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
+
+            <div class="card-body">
+              <h4 class="card-text">Mesa rectangular </h4>
+              <p>Mesa Ratona en Paraíso 100% Laqueado </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
+              </div>
+            </div>
+          </div>
+        </div> 
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="./../../../assets/Imagenes/Imagen_trabajo_8_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
+
+            <div class="card-body">
+              <h4 class="card-text">Lava manos</h4>
+              <p>Tapa para Vanitory Terminada, realizada en Marmelero con más de 10 años Estacionada.  </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
+              </div>
+            </div>
+          </div>
+        </div> 
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="./../../../assets/Imagenes/Imagen_trabajo_9_benvenuto.jpg" class="card-img-top" alt="ImagenDeTrabajo">
+
+            <div class="card-body">
+              <h4 class="card-text">Caja para vinos</h4>
+              <p>Caja Personalizada para Vinos. Realizada 100% en OSB.  </p>
               <div class="d-flex justify-content-between align-items-center">
                 <a href="servicios" class="btn btn-sm btn-outline-info">Servicios</a>
               </div>
