--- a/src/app/page/inicio/inicio.component.html
+++ b/src/app/page/inicio/inicio.component.html
@@ -16,7 +16,7 @@
 <body background="../../../assets/Imagenes/Imagen_trabajo_1_benvenuto.jpg">
   <main>
       <div class="px-4 pt-5 my-5 text-center border-bottom">
-          <h1 class="display-4 fw-bold Letras-inicio">Benvenuto</h1>
+          <h1 class="display-4 fw-bold nombreBenvenuto Letras-inicio">Benvenuto</h1>
           <div class="col-lg-6 mx-auto">
             <p class="lead mb-4 Letras-inicio"><b>Carpintería Artesanal</b> desde 1970 en la ciudad de Cipolletti.
               Realizamos trabajos en <b>Madera Estacionada</b>.
