--- a/src/app/page/trabajo/trabajo.component.html
+++ b/src/app/page/trabajo/trabajo.component.html
@@ -17,8 +17,8 @@
 <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Trabajos realizados</h1>
-        <p class="lead text-muted">Estos son algunos de los trabajos que hemos realizado</p>
+        <h1 class="fw-light SubtitulosBenvenuto">Trabajos realizados</h1>
+        <p class="lead text-muted">Estos son algunos de los trabajos que hemos realizado a lo largo de nuestra trayectoria</p>
       </div>
     </div>
 </section>
