--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,8 +6,9 @@
     <footer class="footer-distributed">
       <div class="container-fluid">
         <h1 style="color: white; position: relative;
-        top: 10px; left:35%;
-        width: 600px;"><img src="../../../assets/Imagenes/benvenuto_logo.png" style="margin: 10px;" alt="benvenuto_logo" width="100px" height="100px"> Benvenuto</h1>
+          top: 10px; left:30%;
+          width: 600px;"> <img src="../../../assets/Imagenes/benvenuto_logo.png" style="margin: 10px;" alt="benvenuto_logo" width="100px" height="100px"> Benvenuto
+        </h1>
   
         <div class="footer-right">
   
