--- a/src/app/page/servicios/servicios.component.css
+++ b/src/app/page/servicios/servicios.component.css
@@ -1,16 +1,18 @@
 
 
-p{
+  p{
   font-size: larger;  
-}
-
-.b-example-divider {
-    height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
   }
+
+
+  .zoomServicios {
+    margin-top: 30px;
+    transition: transform .5s; 
+}
+ 
+.zoomServicios:hover {
+    transform: scale(1.1);
+}
   
   .bi {
     vertical-align: -.125em;
@@ -64,5 +66,5 @@ p{
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-}
+  } 
   
