--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -14,7 +14,10 @@ section {
   font-weight: 700;
   text-decoration: underline;
 }
-
+ h1{
+  font-family: 'MonteCarlo', cursive;
+  font-size: 80px;
+ }
 .footer-distributed {
   background-color: #313131 ;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
