cambios contacto e imagenes

--- a/src/app/page/contacto/contacto.component.html
+++ b/src/app/page/contacto/contacto.component.html
@@ -1,10 +1,10 @@
 <form>  
   <div class="container">
     <div class="row">
-      <p style="margin-top: 30px; font-size: 25px;" class="SubtitulosBenvenuto">Tel: 0299 606-2332 </p> 
-      <p style="margin-top: 5px; font-size: 25px;" class="SubtitulosBenvenuto">Página de Facebook:<a style="font-size: 20px;" class="SubtitulosBenvenuto" href="https://api.whatsapp.com/send?phone=542996062332&app=facebook&entry_point=page_cta">Carpintería Benvenuto</a>  </p>
+      <p class="text-muted" style="font-size: 20px;">Tel: 0299 606-2332 </p> 
+      <p class="text-muted" style="font-size: 20px;">Página de Facebook: <a title="Benvenuto" href="https://www.facebook.com/carpinteriabenvenuto/?tn-str=k*F">Benvenuto</a>
       <div class="col" style="position: relative; top: 30px;"> 
-        <h2 class="SubtitulosBenvenuto"  style="margin-top: 30px; position: relative;left: 70px; bottom: 25px;">Contactanos</h2>   
+        <h2 class="SubtitulosBenvenuto"  style="position: relative;left: 70px; bottom: 30px;">Contactanos</h2>   
         <input name="name" type="text" class="feedback-input" placeholder="Name" />   
         <input name="email" type="text" class="feedback-input" placeholder="Email" />
         <textarea name="text" class="feedback-input" placeholder="Comentario"></textarea>
