--- a/src/app/page/servicios/servicios.component.html
+++ b/src/app/page/servicios/servicios.component.html
@@ -50,7 +50,7 @@
             </div>
             <div>
               <h2 class="SubtitulosBenvenuto" >Ensamble</h2>
-              <p>caballetes, sillas, cajas y cajones, revestimientos y muebles laminados.<p>
+              <p>Caballetes, sillas, cajas y cajones, revestimientos y muebles laminados.<p>
               <a href="equipo" class="btn btn-outline-info">
                 Equipo de trabajo
               </a>
@@ -63,7 +63,7 @@
             </div>
             <div>
               <h2 class="SubtitulosBenvenuto" >Productos hechos</h2>
-              <p>Equipá Tu Hogar Con Muebles que Optimizan Tus Espacios. Hacé Que El Home Office Sea Cómodo.</p>
+              <p>Equipá tu Hogar con muebles que optimizan tus espacios. hacé que el home office sea cómodo.</p>
               <a href="equipo" class="btn btn-outline-info">
                 Equipo de trabajo
               </a>
