--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,7 +7,7 @@
       <div class="container-fluid">
         <h1 style="color: white; position: relative;
           top: 10px; left:30%;
-          width: 600px;"> <img src="../../../assets/Imagenes/benvenuto_logo.png" style="margin: 10px;" alt="benvenuto_logo" width="100px" height="100px"> Benvenuto
+          width: 600px;"> <a href="inicio"><img src="../../../assets/Imagenes/benvenuto_logo.png" style="margin: 10px;" alt="benvenuto_logo" width="100px" height="100px"></a> Benvenuto
         </h1>
   
         <div class="footer-right">
