--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <img src="../../../assets/Imagenes/benvenuto_logo.png" style="margin: 10px;" alt="benvenuto_logo" width="50px" height="50px">
+      <a href="inicio"><img src="../../../assets/Imagenes/benvenuto_logo.png" style="margin: 10px;" alt="benvenuto_logo" width="50px" height="50px"></a>
       <a class="navbar-brand nombreBenvenuto" style="font-size:xx-large;" href="inicio">Benvenuto</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
