--- a/src/app/page/inicio/inicio.component.css
+++ b/src/app/page/inicio/inicio.component.css
@@ -13,5 +13,11 @@ p{
     .rounded-lg-3 { border-radius: .3rem; }
   }
   .Letras-inicio{
-    background-color: rgba(227, 237, 234, 0.582)
+    background-color: rgba(227, 237, 234, 0.582);
+    opacity: 50%;
+    transition: all 0.3s;
+    
+  }
+  .Letras-inicio:hover{
+    opacity: 100%;
   }
