cambio de inicio e iconos

--- a/src/app/page/servicios/servicios.component.html
+++ b/src/app/page/servicios/servicios.component.html
@@ -16,6 +16,8 @@
 
 <body>
     
+    <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,0,200" />
+    <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,500,0,200" />
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
      
       <symbol id="tools" viewBox="0 0 16 16">
@@ -31,7 +33,9 @@
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
             <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"/></svg>
+              <span class="material-symbols-outlined">
+                format_paint
+                </span>
             </div>
             <div>
               <h2 class="SubtitulosBenvenuto" >Barniz</h2>
@@ -59,7 +63,9 @@
           </div>
           <div class="col d-flex align-items-start">
             <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"/></svg>
+              <span class="material-symbols-sharp">
+                inventory_2
+                </span>
             </div>
             <div>
               <h2 class="SubtitulosBenvenuto" >Productos hechos</h2>
