--- a/src/app/page/inicio/inicio.component.css
+++ b/src/app/page/inicio/inicio.component.css
@@ -14,10 +14,9 @@ p{
   }
   .Letras-inicio{
     background-color: rgba(227, 237, 234, 0.582);
-    opacity: 50%;
-    transition: all 0.3s;
-    
   }
-  .Letras-inicio:hover{
-    opacity: 100%;
+
+  .tituloInicio{
+    text-shadow: -1px 0 rgb(255, 255, 255), 1px 0 rgba(248, 248, 248, 0.945), 0 1px rgb(255, 255, 255), 0 -1px rgba(253, 253, 253, 0.877);
+    color: rgb(0, 0, 0);
   }
